Game Script added and the screen width is changed to the 700 px

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Block Breaker Game JS</title>
+    <script src="Assets/javascirpt/prototype.js"></script>
+    <script src="Assets/javascirpt/constants.js"></script>
+    <script src="Assets/javascirpt/assetLoader.js"></script>
+    <script src="Assets/javascirpt/Game.js"></script>
+    <script src="Assets/javascirpt/Ball.js"></script>
+    <script src="Assets/javascirpt/Paddle.js"></script>
+    <script src="Assets/javascirpt/Input.js"></script>
+    <script src="Assets/javascirpt/Brick.js"></script>
+
   <link href="Assets/css/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">   
 </head>
@@ -22,7 +31,7 @@
       
     </div>
 
-    <canvas id="game-canvas" width="500px" height="600px"></canvas>
+    <canvas id="game-canvas" width="700px" height="500px"></canvas>
 
     <div class="contact">
       <div class="info">
@@ -38,6 +47,10 @@
     </div>
 
   </div>
+<script>
+init();
+</script>
+
 </body>
 </html>
 
